--- a/templates/administrator/viewedit_managefaculties.html
+++ b/templates/administrator/viewedit_managefaculties.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-primary p-3">
-        <a class="navbar-brand" href="#"><i class="fas fa-tachometer-alt"></i> Admin Dashboard</a>
+        <a class="navbar-brand" href="/adminhome"><i class="fas fa-tachometer-alt"></i> Admin Dashboard</a>
     </nav>
          
     <div class="container mt-4">
