--- a/templates/administrator/EditSemester.html
+++ b/templates/administrator/EditSemester.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-primary p-3">
-        <a class="navbar-brand" href="/adminhome">Admin Dashboard</a>
+        <a class="navbar-brand" href="#">Admin Dashboard</a>
     </nav>
 
     <div class="container mt-4">
@@ -20,7 +20,7 @@
                 <select class="form-select" id="course" name="course_id">
                     <option selected disabled>Select Course</option>
                     {% for i in data %}
-                    <option value="{{i.id}}">{{ i.course_name }}</option>
+                    <option value="{{ i.id }}" {% if i.id == val.course_id.id %}selected{% endif %}>{{ i.course_name }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -28,13 +28,14 @@
                 <label for="semester" class="form-label">Select Semester</label>
                 <select class="form-select" id="semester" name="semester_name">
                     <option selected disabled>Select Semester</option>
-                    <option value="semester 1">Semester 1</option>
-                    <option value="semester 2">Semester 2</option>
-                    <option value="semester 3">Semester 3</option>
-                    <option value="semester4">Semester 4</option>
-                    <option value="semester5">Semester 5</option>
-                    <option value="semester6">Semester 6</option>
+                    <option value="semester 1" {% if val.semester_name == 'semester 1' %}selected{% endif %}>Semester 1</option>
+                    <option value="semester 2" {% if val.semester_name == 'semester 2' %}selected{% endif %}>Semester 2</option>
+                    <option value="semester 3" {% if val.semester_name == 'semester 3' %}selected{% endif %}>Semester 3</option>
+                    <option value="semester 4" {% if val.semester_name == 'semester 4' %}selected{% endif %}>Semester 4</option>
+                    <option value="semester 5" {% if val.semester_name == 'semester 5' %}selected{% endif %}>Semester 5</option>
+                    <option value="semester 6" {% if val.semester_name == 'semester 6' %}selected{% endif %}>Semester 6</option>
                 </select>
+                
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
