--- a/templates/administrator/managesubject.html
+++ b/templates/administrator/managesubject.html
@@ -108,13 +108,13 @@
     <div class="container mt-4">
         {% csrf_token %}
         <div class="d-flex justify-content-center align-items-center mb-3">
-            <h3>Manage Semester</h3>
+            <h3>Manage Subject</h3>
         </div>
 
         <!-- Add Semester Button -->
         <div class="add-btn-container">
-            <a href="/addsemester" class="btn btn-success">
-                <i class="fas fa-plus"></i> Add Semester
+            <a href="/addsubject" class="btn btn-success">
+                <i class="fas fa-plus"></i> Add Subject
             </a>
         </div>
 
@@ -123,22 +123,24 @@
             <thead>
                 <tr>
                     <th>Semester</th>
-                    <th>Course</th>
-                    <th>Department</th>
-                    <th class="text-end">Actions</th>
+                    <th>subject_name</th>
+                    <th>subject_code</th>
+                    <th>subject_credit</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
                 {% for i in data %}
                 <tr>
-                    <td>{{ i.semester_name }}</td>
-                    <td>{{ i.course_id.course_name }}</td>
-                    <td>{{ i.course_id.dep_id.department_name }}</td>
+                    <td>{{ i.sem_id.semester_name }}</td>
+                    <td>{{ i.subject_name }}</td>
+                    <td>{{ i.subject_code }}</td>
+                    <td>{{ i.subject_credit }}</td>
                     <td class="text-end action-btns">
-                        <a href="/editsemester/{{i.id}}/" class="btn btn-warning btn-sm">
+                        <a href="/editsubject/{{i.id}}" class="btn btn-warning btn-sm">
                            <i class="fas fa-edit"></i> Edit
                         </a>
-                        <a href="/deletesemester/{{ i.id }}" class="btn btn-danger btn-sm" 
+                        <a href="/deletesub/{{ i.id }}" class="btn btn-danger btn-sm" 
                            onclick="return confirm('Are you sure you want to delete this semester?');">
                            <i class="fas fa-trash-alt"></i> Delete
                         </a>
